--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -56,10 +56,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
 
           <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold">Company name</h6>
+          <h6 class="text-uppercase font-weight-bold">VICERANT</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit.
+          <p>VICERANT offers you the guidance and power to develop your businesses with the newest technologies available in the IT industry.
+             We provide this unique service with the power of highly skilled and enthusiastic consultants and developers
           </p>
 
         </div>
@@ -69,19 +69,19 @@
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 
           <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Products</h6>
+          <h6 class="text-uppercase font-weight-bold">Catergories</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <a href="#!">MDBootstrap</a>
+            <a href="#!">Web Developmet</a>
           </p>
           <p>
-            <a href="#!">MDWordPress</a>
+            <a href="#!">Mobile Developmet</a>
           </p>
           <p>
-            <a href="#!">BrandFlow</a>
+            <a href="#!">Design</a>
           </p>
           <p>
-            <a href="#!">Bootstrap Angular</a>
+            <a href="#!">Programming</a>
           </p>
 
         </div>
@@ -91,19 +91,19 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 
           <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+          <h6 class="text-uppercase font-weight-bold">Sub Catergories</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <a href="#!">Your Account</a>
+            <a href="#!">Python</a>
           </p>
           <p>
-            <a href="#!">Become an Affiliate</a>
+            <a href="#!">Ionic</a>
           </p>
           <p>
-            <a href="#!">Shipping Rates</a>
+            <a href="#!">Angular</a>
           </p>
           <p>
-            <a href="#!">Help</a>
+            <a href="#!">Java</a>
           </p>
 
         </div>
@@ -116,7 +116,7 @@
           <h6 class="text-uppercase font-weight-bold">Contact</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <mdb-icon fas icon="home" class="mr-3"></mdb-icon> New York, NY 10012, US
+            <mdb-icon fas icon="home" class="mr-3"></mdb-icon> Mill Road, Moratuwa
           </p>
           <p>
             <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@example.com
