--- a/src/app/admin/all-student/all-student.component.html
+++ b/src/app/admin/all-student/all-student.component.html
@@ -1,5 +1,5 @@
 
-        <div class="row" >
+        <div class="row" style="margin-top: 60px;">
             <div class="col-md-3" *ngFor="let stu of allStudent" >
              <!-- Card -->
               <mdb-card >
