--- a/src/app/admin/content-provider/content-provider.component.html
+++ b/src/app/admin/content-provider/content-provider.component.html
@@ -1,5 +1,5 @@
 
-        <div class="row" >
+        <div class="row" style="margin-top: 60px;">
             <div class="col-md-3" *ngFor="let cp of contentProvider" >
              <!-- Card -->
               <mdb-card >
