--- a/src/app/admin/recent-added-course/recent-added-course.component.html
+++ b/src/app/admin/recent-added-course/recent-added-course.component.html
@@ -1,5 +1,5 @@
 
-        <div class="row" >
+        <div class="row" style="margin-top: 60px;" >
             <div class="col-md-3" *ngFor="let course of denyCourse" >
              <!-- Card -->
               <mdb-card >
