--- a/src/app/student/setting/setting.component.html
+++ b/src/app/student/setting/setting.component.html
@@ -41,7 +41,7 @@
                   <span class="input-group-text" id="inputGroupFileAddon01" type="button" (click)="uploadImage()" >Upload</span>
                 </div>
                 <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="inputGroupFile01"
+                  <input type="file" class="custom-file-input" id="inputGroupFile01" accept="Image/*"
                     aria-describedby="inputGroupFileAddon01" (change)="onFileSelected($event)">
                   <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                 </div>
