--- a/src/app/super-admin/add-admin/add-admin.component.html
+++ b/src/app/super-admin/add-admin/add-admin.component.html
@@ -1,8 +1,8 @@
 
 <!-- Horizontal material form -->
-<div style="margin-top: 60px;width:80%; margin:auto;">
+<div style="width:80%; margin:auto;">
     <h3 class="text-center">Register Form</h3>
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" style="margin-top:60px;">
         <!-- Grid row -->
         <div class="form-group row">
           <!-- Material input -->
@@ -44,7 +44,7 @@
             </div>
           </div>
 
-          <div class="form-group row">
+          <div class="form-group row" >
               <!-- Material input -->
               <label for="email" class="col-sm-2 col-form-label">Admin Type</label>
               <div class="col-sm-10">
