--- a/src/app/super-admin/all-admin/all-admin.component.html
+++ b/src/app/super-admin/all-admin/all-admin.component.html
@@ -1,4 +1,4 @@
-<div class="admin">
+<div class="admin" style="margin-top: 60px;">
   <h3 class="text-center"> Admins</h3>
     <div class="row" >
         <div class="col-md-3" *ngFor="let ad of allAdmins" >
