--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -139,7 +139,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+      <a href="#"> vicerant.com</a>
     </div>
     <!-- Copyright -->
 
