--- a/src/app/contentprovider/contentprovider.component.html
+++ b/src/app/contentprovider/contentprovider.component.html
@@ -6,7 +6,7 @@
 
   </div>
 </div> -->
-<app-navbar *ngIf="userRole === 'student'"></app-navbar>
+<app-navbar *ngIf="userRole === 'contentProvider'"></app-navbar>
 <app-admin-navbar *ngIf="userRole === 'admin' || userRole === 'superAdmin'"></app-admin-navbar>
 <div class="row" style="margin-top:60px;" >
     <div class="col-2">
