--- a/src/app/student/setting/setting.component.html
+++ b/src/app/student/setting/setting.component.html
@@ -35,18 +35,24 @@
          <div class="form-group">
 
              <!-- <input type="file" class="form-control-file" id="exampleFormControlFile1" (change)="onFileSelected($event)"> -->
-             <div class="input-group">
+            <div class="row">
 
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="inputGroupFileAddon01" type="button" (click)="uploadImage()" >Upload</span>
-                </div>
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="inputGroupFile01" accept="Image/*"
-                    aria-describedby="inputGroupFileAddon01" (change)="onFileSelected($event)">
-                  <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                </div>
-
-              </div>
+              <div class="input-group col-8">
+ 
+                 <div class="input-group-prepend">
+                   <span class="input-group-text" id="inputGroupFileAddon01" type="button" (click)="uploadImage()" style="max-height:40px;">Upload</span>
+                 </div>
+                 <div class="custom-file">
+                   <input type="file" class="custom-file-input" id="inputGroupFile01" accept="Image/*"
+                     aria-describedby="inputGroupFileAddon01" (change)="onFileSelected($event)">
+                   <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                 </div>
+ 
+               </div>
+               <div class="col-4">
+                 <img [src]="url" height="150" width="150"  *ngIf="imageView" style="border: solid black 2px;">
+             </div>
+            </div>
             </div>
 
        </div>
