--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -134,7 +134,7 @@
         </div>
         <p class="text-center" style="color: red;">{{msg}}</p>
             <div class="text-center mb-3">
-              <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
+              <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light" [disabled]="!loginForm.valid"
                       mdbWavesEffect>Sign in
               </button>
             </div>
