--- a/src/app/super-admin/add-admin/add-admin.component.html
+++ b/src/app/super-admin/add-admin/add-admin.component.html
@@ -75,7 +75,7 @@
         <!-- Grid row -->
         <div class="form-group row">
             <div class="col-sm-10">
-              <button type="submit" mdbBtn color="primary">Register</button>
+              <button type="submit" mdbBtn color="primary" [disabled]="!registerForm.valid">Register</button>
             </div>
           </div>
 
