window location time

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -307,7 +307,7 @@
                   </div>
 
           </div>
-
+          <p class="text-center" style="color: red;">{{smsg}}</p>
           <div class="text-center mb-3">
             <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light" [disabled]="!registerForm.valid"
                     mdbWavesEffect>Sign Up
