--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-admin-navbar></app-admin-navbar>
 <div class="row" >
   <div class="col-2">
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
@@ -7,7 +7,8 @@
       <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true" style="margin-top:100px;">Recent Added Course<span class="badge badge-light">{{size}}</span></a>
       <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Content Providers</a>
       <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Student</a>
-      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Add Catergory</a>
+      <a class="nav-link" id="v-pills-addC-tab" data-toggle="pill" href="#v-pills-addC" role="tab" aria-controls="v-pills-addC" aria-selected="false">Add Catergory</a>
+      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
     </div>
   </div>
   <div class="col-10">
@@ -17,7 +18,8 @@
     </div>
     <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab"><app-content-provider></app-content-provider></div>
     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab"><app-all-student></app-all-student></div>
-    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"><app-addcatergory></app-addcatergory></div>
+    <div class="tab-pane fade" id="v-pills-addC" role="tabpanel" aria-labelledby="v-pills-addC-tab"><app-addcatergory></app-addcatergory></div>
+    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab"><app-setting></app-setting></div>
   </div>
 </div>
 </div>
