forger password error

--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -201,7 +201,7 @@
 
 
 
-
+            <p class="text-center" style="color: red;">{{fmsg}}</p>
             <div class="text-center mb-3">
               <button type="submit" mdbBtn gradient="blue" block="true" rounded="true" class="z-depth-1a waves-light"
                       mdbWavesEffect>Send
