--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <app-navbar></app-navbar>
   <mdb-carousel class="carousel slide carousel-fade" [type]="'carousel-thumbnails'" [animation]="'fade'">
       <mdb-carousel-item>
-        <img class="d-block w-100" src="https://media.gettyimages.com/photos/digital-human-brain-covered-with-networks-picture-id870184586?s=2048x2048" alt="First slide">
+        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2018/10/09/09/49/e-learning-3734521_1280.jpg" alt="First slide">
       </mdb-carousel-item>
       <mdb-carousel-item>
-        <img class="d-block w-100" src="https://media.gettyimages.com/photos/top-view-of-computer-programmer-sitting-at-the-desk-picture-id673947226?s=2048x2048" alt="Second slide">
+        <img class="d-block w-100" src="http://www.ancoax.com/img/web-development-services-bangalore.jpg" alt="Second slide">
       </mdb-carousel-item>
       <mdb-carousel-item>
-        <img class="d-block w-100" src="https://media.gettyimages.com/photos/laboratory-picture-id629942998?s=2048x2048" alt="Third slide">
+        <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2017/09/05/10/19/business-2717063_1280.jpg" alt="Third slide">
       </mdb-carousel-item>
     </mdb-carousel>
 
