--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-admin-navbar></app-admin-navbar>
-<div class="row" >
+<div class="row" style="margin-top: 55px;">
   <div class="col-2">
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" >
         <p class="text-center nav-text" >MENU</p>
