--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark  mdb-color lighten-4 fixed-top" [containerInside]="false" >
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark  mdb-color lighten- fixed-top" [containerInside]="false" >
 
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="router-link-active" style="font-weight: bold;">E-Tuter</a></mdb-navbar-brand>
