--- a/src/app/admin/recent-added-course/recent-added-course.component.html
+++ b/src/app/admin/recent-added-course/recent-added-course.component.html
@@ -17,7 +17,7 @@
                     <mdb-card-title>
                       <h6>{{course.name | shorten}}</h6>
                     </mdb-card-title>
-                    <P>Author: {{course.author}}</P>
+                    <P>Catergory: {{course.catergory}}</P>
                     <!--Text-->
                     <!-- <mdb-card-text>
                      {{course.description | shorten}}
