--- a/src/app/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-navbar/admin-navbar.component.html
@@ -1,11 +1,11 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark mdb-color lighten-1 fixed-top" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark mdb-color lighten-1 fixed-top" [containerInside]="false" >
 
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['/adminhome']" routerLinkActive="router-link-active" style="font-weight: bold;">E-Tuter</a></mdb-navbar-brand>
 
     <!-- Collapsible content -->
-    <links>
+    <links style="max-height: 40px;">
 
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
